# ce-dascen-sim

./: .gitignore  README.md  config_manager.py  functions.py  helper_functions.py  pyproject.toml  requirements.txt  ruff.toml  run_simulation.py
config/: default_config.json  runtime_config.json
config/delivery_schedules/: scenario_01_schedule.json  scenario_02_schedule.json  scenario_03_schedule.json  scenario_03_schedule_sensitivity.json  scenario_04_schedule.json  scenario_05_schedule.json  scenario_06_schedule.json  scenario_06_schedule_sensitivity.json  schedule_deterministic.json  schedule_quality_varied.json
config/experiments/: exp01_baseline_workshop_pull.json  exp02_workshop_push_comparison.json  exp03_linear_flow_storage.json  exp04_parallel_stations_balancing.json  exp05_scheduled_delivery_deterministic.json  exp06_quality_and_missing.json  exp07_stress_test_breakdowns.json  exp08_linear_simple.json  exp09_split_flow.json  exp10_baseline_workshop_pull_no_quality.json  exp11_baseline_workshop_pull_strict_quality.json  exp12_scenario_01.json  exp13_scenario_02.json  exp14_scenario_03.json  exp14_scenario_03_sensitivity.json  exp15_scenario_04.json  exp16_scenario_05.json  exp17_scenario_06.json  exp17_scenario_06_sensitivity.json  exp_index.json
config/system_config/: line_3.json  (+21 more)
docs/: configuration_guide.md  experiments_overview.md  limitations.md  parameter_reference.md
src/: breakdowns.py  breaks.py  g.py  logging.py  product.py  simulation.py  simulation_monitor.py  source.py  station.py  station_state.py  storage.py  validation.py  vehicle.py
(+26 files in other folders)
